# rustoku

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.data/: duplicate.txt  unique.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pages.yml
benches/: rustoku_benchmark.rs  rustoku_benchmarks.rs
demo/: README.md  eslint.config.js  index.html  main.ts  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js
demo/src/: confetti.ts  elements.ts  generator.ts  modal.ts  render.ts  solver.ts  state.ts  theme.ts  toast.ts  trace-helpers.ts  trace.ts  types.ts
demo/tests/: state.test.ts  theme.test.ts  trace-helpers.test.ts  trace.test.ts
docs/: cli.md  library.md  python.md  wasm.md
rustoku-cli/: Cargo.toml
rustoku-cli/src/: csv.rs  main.rs
rustoku-cli/tests/: cli_tests.rs
rustoku-lib/: Cargo.toml
rustoku-lib/benches/: rustoku_benchmark.rs
rustoku-lib/src/: bind.rs  error.rs  format.rs  lib.rs
rustoku-lib/src/core/: board.rs  candidates.rs  masks.rs  mod.rs  solution.rs
rustoku-lib/src/core/techniques/: aic.rs  flags.rs  hidden_pairs.rs  hidden_quads.rs  hidden_singles.rs  hidden_triples.rs  jellyfish.rs  locked_candidates.rs  mod.rs  naked_pairs.rs  naked_quads.rs  naked_singles.rs  naked_triples.rs  skyscraper.rs  swordfish.rs  units.rs  w_wing.rs  x_wing.rs  xy_wing.rs  xyz_wing.rs
rustoku-lib/tests/: proptest_solver.proptest-regressions  proptest_solver.rs
rustoku-py/: Cargo.toml  pyproject.toml
rustoku-py/src/: lib.rs
rustoku-py/tests/: test_basic.py
rustoku-wasm/: Cargo.toml  package-lock.json  package.json  vitest.config.js
rustoku-wasm/src/: lib.rs
rustoku-wasm/tests/: api.test.js
src/: core.rs  error.rs  format.rs  lib.rs  main.rs  rustoku.rs  solution.rs  solver.rs
src/core/: board.rs  candidates.rs  client.rs  entrypoint.rs  generator.rs  masks.rs  mod.rs  propagation.rs  solution.rs  solver.rs  techniques.rs  validator.rs
src/core/techniques/: hidden_pairs.rs  hidden_singles.rs  locked_candidates.rs  mod.rs
tests/: cli_tests.rs
