[workspace]
members = ["rustoku-lib", "rustoku-cli"]
resolver = "3"

[workspace.package]
authors = ["Samuel Huang <samhuang91@gmail.com>"]
version = "0.13.0"
edition = "2024"
rust-version = "1.87"
readme = "README.md"
repository = "https://github.com/huangsam/rustoku"
license = "MIT"
keywords = ["sudoku", "puzzles", "solver", "generator"]
categories = ["games"]
