[package]
name = "rustoku-lib"
description = "Lightning-fast Sudoku solving and generation"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.10.0"
thiserror = "2.0.12"
rayon = "1.11"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
serde_json = "1.0"
proptest = "1.11"

[[bench]]
name = "rustoku_benchmark"
harness = false
