[package]
name = "rustoku-py"
description = "Python bindings for Rustoku"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "rustoku"
crate-type = ["cdylib"]

[dependencies]
rustoku-lib = { path = "../rustoku-lib" }
pyo3 = { version = "0.25", features = ["extension-module"] }
